--- a/jqueryPlugin/demo/layout/scrollTrigger/ex98.html
+++ b/jqueryPlugin/demo/layout/scrollTrigger/ex98.html
@@ -91,8 +91,62 @@
       //duration: 5,
     });
 
-
-
   </script>
+
+
+
+<script>
+  // scrollTrigger 사용선언
+	gsap.registerPlugin(ScrollTrigger);
+	
+	/* scrollTrigger 공통 전역 설정 */
+	ScrollTrigger.defaults({
+		markers: true
+	})
+	
+	/* scrollTrigger 설정1 */
+	var TS = gsap.timeline(); 
+	ScrollTrigger.create({
+		trigger: ".targetItem ",
+		start: "top top",
+		scrub:1,
+		animation: TS ,
+	})
+	
+	/* scrollTrigger 설정2 */
+	var TS = gsap.timeline({
+		scrollTrigger:{
+			trigger : ".targetItem" ,
+			start: "top top",
+			scrub:1   
+		}
+	}) 
+	
+  /* 초기설정 */
+  TS.set(".class", { x: 100 , delay:.5 });
+	/* 트윈 */
+	TS.to(".class", { x: 100 , delay:.5 });
+	
+	/* 다중설정 시 */
+	gsap.utils.toArray("section").forEach(function($item, $index){
+	 ...
+	})
+
+ 
+   /* 미디어쿼리 */
+  ScrollTrigger.matchMedia({
+    // mobile
+    "(min-width: 320px) and (max-width: 767px)": function() {
+      gsap.timeline({
+        scrollTrigger: {
+          trigger : ".targetItem" ,
+          start: "top top",
+          scrub:1   
+        }
+      }).to(".class", { x: 100 , delay:.5 })
+    }
+
+  })
+</script>
 </body>
 </html>
